--- a/uloose.html
+++ b/uloose.html
@@ -1,2 +1,2 @@
-<div style="font-size: 20px">U LOOSE</div>
+<div style="font-size: 20px; text-align: center">U LOOSE</div>
 <!-- AND REMEMBER: LOOSING IN FUN -->
