--- a/plashque/plashque.html
+++ b/plashque/plashque.html
@@ -1,26 +1,19 @@
-<img src="traitors.png">
-<br>
+<html>
+<meta charset="UTF-8">
+<title>Plashque vault</title>
+<img src="traitors.png" width=398 height=400>
 <br>
 <br>
 <img src="animusemployee.png">
-<br>
-<img src="green.png">
-<br>
 <img src="greenceotrue.png">
-<br>
-<img src="white.png">
-<br>
-<img src="yellow.png">
-<br>
-<img src="yellowceo.png">
-<br>
+<img src="green.png">
 <img src="ceo.png">
-<br>
-<img src="blueceo.png">
-<br>
-<img src="blue.png">
-<br>
 <img src="engineer.png">
-<br>
+<img src="white.png">
+<img src="yellowceo.png">
+<img src="yellow.png">
+<img src="blueceo.png">
+<img src="blue.png">
 <img src="olde.png">
 <br>
+</html>
