--- a/plashque/plashque.html
+++ b/plashque/plashque.html
@@ -7,9 +7,10 @@
 <img src="animusemployee.png">
 <img src="greenceotrue.png">
 <img src="green.png">
-<img src="ceo.png">
+<img src="ceotrue.png">
 <img src="engineer.png">
 <img src="white.png">
+<img src="blackceo.png">
 <img src="yellowceo.png">
 <img src="yellow.png">
 <img src="blueceo.png">
